Fix repeating background image on mobile
Class name was changed in html, forgot to make the mobile
stylesheet match.

--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -16,7 +16,7 @@
 	border-top: solid 3px @grey;
 }
 
-#page-header-links #ca-view,
+#mw-page-header-links #ca-view,
 #mw-header-nav-hack,
 #page-tools h2,
 #p-logo {
@@ -150,7 +150,7 @@
 	}
 }
 
-#page-header-links a {
+#mw-page-header-links a {
 	.ca-icon();
 }
 #ca-edit a {
